# aws-sdk-cpp-sys

./: Cargo.toml  build.rs
src/: lib.rs  main.rs
