[package]
name = "aws-sdk-sys"
version = "0.2.1"
edition = "2021"
links = "aws-sdk"

[build-dependencies]
cmake = "0.1.48"
anyhow = "1.0.65"

[target.'cfg(all(target_os="android", target_arch="aarch64"))'.dependencies]
openssl-sys = { git = "https://github.com/kyunghoon/openssl-sys.git", tag="0.0.6" }

[dependencies]
curl-sys = { git = "https://github.com/kyunghoon/curl-sys.git", tag="0.0.9" }
